Fix mobile view overflows

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 html,
 body {
   height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
 }
 
@@ -23,20 +26,22 @@ body {
 
 .wrapper {
   height: 100%;
+  width: 100%;
+  position: relative;
 }
 
 .inner-wrapper {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  position: fixed;
+  position: absolute;
   perspective: 180px;
   perspective-origin: 50% 40%;
 }
 
 .landscape {
   position: absolute;
-  width: 200%;
+  width: 250%;
   left: -75%;
   height: 130%;
   bottom: -30%;
@@ -132,9 +137,9 @@ body {
 
 #links {
   position: relative;
-  top: 15%;
-  margin: 5px;
-  display: inline;
+  top: 20%;
+  width: 300px;
+  margin: 0 auto;
 }
 
 #links a {
@@ -166,11 +171,13 @@ body {
 
 @media only screen and (max-width: 500px) {
   .retro {
-    font-size: 3em;
-    letter-spacing: -12px;
+    font-size: 2.7em;
+    letter-spacing: -8px;
+    margin-bottom: -10px;
   }
 
   .wave {
     font-size: 1.7em;
+    letter-spacing: -5px;
   }
 }
